--- a/src/components/HierarchyPanel/index.css
+++ b/src/components/HierarchyPanel/index.css
@@ -4,3 +4,71 @@
     width: 30%;
     margin-right: 5px;
 }
+
+.buttons-container{
+    width: 100%;
+    height: 5%;
+    border-top: 1px solid;
+    display: flex;
+}
+
+.buttons-container .button{
+    border: 1px solid;
+    width: 100%;
+    margin: 3px;
+    border-radius: 10px;
+}
+
+.shapes-details-container{
+    width: 100%;
+    height: 95%;
+    overflow-y: auto;
+    overflow-x: clip;
+}
+
+.shape-detail-container{
+    width: calc(100% - 20px);
+    border: 1px solid;
+    margin: 10px;
+    border-radius: 10px;
+}
+
+.general-info-container{
+    position: relative;
+    height: 4rem;
+    border-bottom: 1px solid;
+}
+
+.shape-name{
+    position: absolute;
+    font-size: .9em;
+    left: 5px;
+    bottom: 0;
+}
+
+.shape-type{
+    position: absolute;
+    font-size: .7em;
+    right: 5px;
+}
+
+.attributes-container{
+    display: flex;
+    width: 100%;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.attribute{
+    width: 35%;
+    margin: 5px;
+}
+
+.attribute > input[type="text"]{
+    width: calc(100% - 4px);
+    border: 1px solid;
+    border-radius: 10px;
+}
+
+.attributei > label{
+}
