--- a/src/components/DrawingPanel/index.css
+++ b/src/components/DrawingPanel/index.css
@@ -3,4 +3,9 @@
     border-radius: 10px;
     width: 70%;
     margin-left: 5px;
+    position: relative;
+}
+
+.drawing-panel .shape{
+    position: absolute;
 }
