--- a/src/App.css
+++ b/src/App.css
@@ -8,3 +8,31 @@
 body{
     margin: unset;
 }
+
+@media(max-width: 850px){
+    .panels-container{
+        flex-direction: column;
+        align-items: center;
+        height: calc(150vh - 100px);
+    }
+
+    .panels-container > .hierarchy-panel{
+        height: 50vh;
+        margin-bottom: 2vh;
+        width: 70%;
+    }
+
+    .panels-container > .drawing-panel{
+        height: 100vh;
+        margin-top: 2vh;
+        width: 90%;
+    }
+
+    .panels-container > .hierarchy-panel .buttons-container{
+        height: 10%;
+    }
+
+    .panels-container > .hierarchy-panel .shapes-details-container{
+        height: 90%;
+    }
+}
