--- a/src/components/HierarchyPanel/index.css
+++ b/src/components/HierarchyPanel/index.css
@@ -30,6 +30,10 @@
     background-image: url(/src/assets/icons/verticalLineIcon.png);
 }
 
+.circle{
+    background-image: url(/src/assets/icons/circleIcon.svg);
+}
+
 .normal-line{
     background-image: url(/src/assets/icons/normalLineIcon.png);
 }
