all default margins of p elements have been deleted

--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,10 @@ body{
     margin: unset;
 }
 
+p{
+    margin: unset;
+}
+
 @media(max-width: 850px){
     .panels-container{
         flex-direction: column;
