color and thinness of loading circle now are given by props

--- a/src/components/GeneralComponents/LoadingCircle/loadingCircleStyles.css
+++ b/src/components/GeneralComponents/LoadingCircle/loadingCircleStyles.css
@@ -13,6 +13,7 @@
     border: 10px solid transparent;
     border-top: 10px solid #0064ff;
     animation-iteration-count: infinite;
+    box-sizing: border-box;
 }
 
 .first-loading-circle{
