now user can draw and move shapes with mouse. basic ui has been added

--- a/src/pages/Board/Styles/DrawingPanelStyles.css
+++ b/src/pages/Board/Styles/DrawingPanelStyles.css
@@ -9,3 +9,10 @@
 .drawing-panel .shape{
     position: absolute;
 }
+
+.drawing-panel-mouse-panel {
+    position: absolute;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+}
