--- a/src/pages/Board/Styles/boardStyles.css
+++ b/src/pages/Board/Styles/boardStyles.css
@@ -9,6 +9,19 @@ body{
     margin: unset;
 }
 
+.private-route-loading-container{
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.private-route-loading-main{
+    width: 5em;
+    height: 5em;
+}
+
 @media(max-width: 850px){
     .panels-container{
         flex-direction: column;
