--- a/src/pages/Board/Styles/DrawingPanelStyles.css
+++ b/src/pages/Board/Styles/DrawingPanelStyles.css
@@ -4,6 +4,7 @@
     position: relative;
     background-color: #ebf0f2;
     box-shadow: 5px 5px 20px, -5px -5px 20px;
+    overflow: clip;
 }
 
 .drawing-panel .shape{
