--- a/src/pages/Board/Styles/hierarchyPanelStyles.css
+++ b/src/pages/Board/Styles/hierarchyPanelStyles.css
@@ -5,7 +5,7 @@
     display: flex;
     max-height: calc(100% - 8rem);
     top: 3rem;
-    z-index: 2;
+    z-index: 3;
 }
 
 .hierarchy-buttons-container{
@@ -42,6 +42,10 @@
 .hierarchy-panel-divider {
     border: 1px solid;
     border: 1px solid #fff;
+}
+
+.select-button-select{
+    background-image: url(/src/assets/icons/tap.png);
 }
 
 .select-button-move{
