--- a/src/pages/Board/Styles/DrawingPanelStyles.css
+++ b/src/pages/Board/Styles/DrawingPanelStyles.css
@@ -13,7 +13,27 @@
 
 .drawing-panel-mouse-panel {
     position: absolute;
-    z-index: 1;
+    z-index: 2;
     width: 100%;
     height: 100%;
+}
+
+.shape-selection-box {
+    border: 5px solid #158fca;
+    width: 100%;
+    height: 100%;
+    box-sizing: content-box !important;
+    position: absolute;
+    display: none;
+    top: -5px;
+    left: -5px;
+    border-radius: 5px;
+}
+
+.shape:hover .shape-selection-box {
+    display: unset;
+}
+
+.shape-selection-box-selected {
+    display: unset;
 }
