delete and delete all have been added

--- a/src/pages/Board/Styles/hierarchyPanelStyles.css
+++ b/src/pages/Board/Styles/hierarchyPanelStyles.css
@@ -44,6 +44,14 @@
     border: 1px solid #fff;
 }
 
+.delete-all-button{
+    background-image: url(/src/assets/icons/broom.png);
+}
+
+.delete-button{
+    background-image: url(/src/assets/icons/x-mark.png);
+}
+
 .select-button-select{
     background-image: url(/src/assets/icons/tap.png);
 }
