--- a/src/pages/BoardsPanel/Styles/indexStyles.css
+++ b/src/pages/BoardsPanel/Styles/indexStyles.css
@@ -81,3 +81,9 @@
     background-color: #21222d;
     border-radius: 1em;
 }
+
+.boards-panel-language-selector-container {
+    width: 3rem;
+    height: 3rem;
+    margin-right: 1rem;
+}
