--- a/src/pages/BoardsPanel/Styles/actionStyle.css
+++ b/src/pages/BoardsPanel/Styles/actionStyle.css
@@ -35,15 +35,17 @@
     display: block;
     color: #131010db;
     border-radius: 5px;
-    width: fit-content;
-    padding: 1em;
     transition: opacity 300ms;
     opacity: 0;
     position: absolute;
+    padding: 1em;
+    width: fit-content;
+    z-index: -1;
 }
 
 .tooltip-show{
     opacity: 1;
+    z-index: 1;
 }
 
 .actions {
